# vector

./: .clangd  .gitignore  .gitmodules  Guide.html  Makefile.am  Makefile.in  README.md  README.md.in  Readme.html  afterdoc_8h_source.html  aligned__alloc_8c_source.html  aligned_alloc_8c-example.html  annotated.html  annotated_dup.js  autogen.sh  classA.html  classA__coll__graph.md5  classA__inherit__graph.map  classA__inherit__graph.md5  classAfterdoc__Test.html  classB.html  classB__coll__graph.map  classB__coll__graph.md5  classB__inherit__graph.map  classB__inherit__graph.md5  classC.html  classC__coll__graph.map  classC__coll__graph.md5  classC__inherit__graph.map  classC__inherit__graph.md5  classD.html  classD__coll__graph.map  classD__coll__graph.md5  classD__inherit__graph.map  classD__inherit__graph.md5  classE.html  classE__coll__graph.map  classE__coll__graph.md5  classE__inherit__graph.map  classE__inherit__graph.md5  (+267 more)
.github/workflows/: auto_docs.yml  cross-platform.yml  doxygen-gh-pages.yml  linux.yml  makefile.yml  render-readme.yml  tag-files.yml  windows.yml
docs/: annotated.html  annotated_dup.js  classes.html  dir_1a55803d4667afd0b5d398f378b65f85.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_accc225023675783ee9945f267dee27b.html  dir_accc225023675783ee9945f267dee27b_dep.map  dir_accc225023675783ee9945f267dee27b_dep.md5  doxyconf  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.dot  graph_legend.html  graph_legend.md5  group__Allocation.dot  group__Allocation.html  group__Allocation.js  group__Allocation.map  group__Allocation.md5  group__Callbacks.html  group__Utilities.dot  group__Utilities.html  group__Utilities.map  group__Utilities.md5  group__Vector.dot  group__Vector.html  group__Vector.js  group__Vector.map  group__Vector.md5  (+142 more)
docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals_eval.html  graph_legend.html  group__Allocation.html  group__Allocation.map  group__Utilities.html  group__Vector__API.html  group__Vector__API_ga184f04299040b2bfd8c03ef22abc7b8b_cgraph.map  group__Vector__API_ga1a193e06f6700de896628631b8569740_cgraph.map  group__Vector__API_ga39836c927f0e0fc79dbf39728972d08e_cgraph.map  group__Vector__API_ga5081815905cf71570856aef717659463_cgraph.map  group__Vector__API_ga6e5077303af4dfe720af5a0608553922_cgraph.map  group__Vector__API_ga988880baa4fe32fb6d4299daf1a29a1f_cgraph.map  group__Vector__API_gaa94c547c9488b4f9dce5eb01067c2ae1_cgraph.map  group__Vector__API_gaae3cfb2691a50da87169b5e057169782_cgraph.map  group__Vector__API_gabf21611afbbdda61da4ffa361fc783dc_cgraph.map  group__Vector__API_gabf21611afbbdda61da4ffa361fc783dc_cgraph.md5  index.html  navtreedata.js  navtreeindex0.js  structvector__opts__t.html  structvector__t.html  vector_8c.html  vector_8c_source.html  vector_8h.html  vector_8h.js  vector_8h__incl.map
docs/html/search/: all_6.js  groups_0.js  variables_0.js
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_0.js  functions_1.js  functions_2.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  pages_1.js  pages_2.js  related_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+2 more)
doxygen/: doxyconf
examples/: Makefile.am  aligned_alloc.c  create.c  examples.dox  init.c  polimorph.c
imgs/: linux_badge.md  windows_badge.md
m4/: ax_valgrind_check.m4
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_2.js  enums_1.js  enums_2.js  enumvalues_1.js  (+19 more)
src/: Makefile.am  Makefile.in  main.c  memswap.c  memswap.h  polimorph.c  vector.c  vector.h
tests/: Makefile.am  Makefile.in  memswap_test.c  vector_test.c  vector_test_failures.c  vector_test_other.c
