

bin_PROGRAMS = polimorph
polimorph_SOURCES = polimorph.c
polimorph_LDADD = $(top_builddir)/src/libvector_static.la
polimorph_LIBS = $(CODE_COVERAGE_LIBS)
polimorph_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) -I$(top_srcdir)/src
polimorph_CFLAGS = $(CODE_COVERAGE_CFLAGS)
polimorph_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)


