

bin_PROGRAMS = polimorph create aligned_alloc
polimorph_SOURCES = polimorph.c
polimorph_LDADD = $(top_builddir)/src/libvector_static.la
polimorph_LIBS = $(CODE_COVERAGE_LIBS)
polimorph_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) -I$(top_srcdir)/src
polimorph_CFLAGS = $(CODE_COVERAGE_CFLAGS)
polimorph_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)


aligned_alloc_SOURCES = aligned_alloc.c
aligned_alloc_LDADD = $(top_builddir)/src/libvector_static.la
aligned_alloc_LIBS = $(CODE_COVERAGE_LIBS)
aligned_alloc_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) -I$(top_srcdir)/src
aligned_alloc_CFLAGS = $(CODE_COVERAGE_CFLAGS)
aligned_alloc_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)


create_SOURCES = create.c
create_LDADD = $(top_builddir)/src/libvector_static.la
create_LIBS = $(CODE_COVERAGE_LIBS)
create_CPPFLAGS = $(CODE_COVERAGE_CPPFLAGS) -I$(top_srcdir)/src
create_CFLAGS = $(CODE_COVERAGE_CFLAGS)
create_CXXFLAGS = $(CODE_COVERAGE_CXXFLAGS)
